update swagger tag
