# docs/swagger.json
@@ -4,13 +4,13 @@
         "contact": {}
     },
     "paths": {
-        "/Arrayelement/samesumelement/{arrLen}/{arr}": {
+        "/arrayelement/samesumelement/{arrLen}/{arr}": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "arrayElement"
+                    "ArrayElement"
                 ],
                 "parameters": [
                     {
